--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,8 @@ copyright_holder = chromatic@wgz.org
 [AutoVersion]
 format = 1.{{ cldr('yyyyMMdd') }}.{{ cldr('HHmm') }}
 
+[AutoPrereqs]
+
 [PodWeaver]
 finder = :InstallModules
 
@@ -23,7 +25,6 @@ commit_msg  = v%v%n%n%c           ; see Git::Commit
 tag_format  = %v                  ; see Git::Tag
 tag_message = %v                  ; see Git::Tag
 push_to     = origin              ; see Git::Push
-push_to     = neworigin
 
 [GitHub::Meta]
 repo = Plack-Middleware-BotDetector
