Added CHANGES dzil plugin.

--- a/dist.ini
+++ b/dist.ini
@@ -28,3 +28,8 @@ push_to     = origin              ; see Git::Push
 
 [GitHub::Meta]
 repo = Plack-Middleware-BotDetector
+
+[GitFmtChanges]
+filename   = CHANGES
+log_format = medium
+tag_regexp = ^1
