Updates to improve prereqs and install speed.

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Plack-Middleware-BotDetector
 author  = chromatic <chromatic@wgz.org>
 license = Perl_5
 copyright_holder = chromatic
-copyright_year   = 2016
+copyright_year   = 2017
 
 [@Basic]
 author           = chromatic
@@ -33,3 +33,8 @@ repo = Plack-Middleware-BotDetector
 filename   = CHANGES
 log_format = medium
 tag_regexp = ^1
+
+[ModuleBuildTiny]
+static = yes
+
+[MetaJSON]
